# workspace

./: .gitignore  LICENSE  README.md
its/: CMakeLists.txt  main.cpp
its/common/: CMakeLists.txt  Constants.h  Interface.h
its/common/asn1/: CMakeLists.txt
its/common/buffers/: CMakeLists.txt  gps.proto  object.proto  vehicle.proto
its/data-provider/: CMakeLists.txt  LocationDataProvider.cpp  LocationDataProvider.h  VehicleDataProvider.cpp  VehicleDataProvider.h
its/facilities/: CMakeLists.txt
its/facilities/ca-service/: ApplicationIF.cpp  ApplicationIF.h  CMakeLists.txt  CaApplicationIF.cpp  CaApplicationIF.h  CaFacilityIF.cpp  CaFacilityIF.h  CaManagementIF.cpp  CaManagementIF.h  CaNetworkTransportIF.cpp  CaNetworkTransportIF.h  CaSecurityIF.cpp  CaSecurityIF.h  CaService.cpp  CaService.h  CamEncodeDecode.cpp  CamEncodeDecode.h  CamReceptionMgmt.cpp  CamReceptionMgmt.h  CamTransmissionMgmt.cpp  CamTransmissionMgmt.h  FacilityIF.cpp  FacilityIF.h  ManagementIF.cpp  ManagementIF.h  NetworkTransportIF.cpp  NetworkTransportIF.h  SecurityIF.cpp  SecurityIF.h
sim/: CMakeLists.txt  dependency.sh  simulator_main.cpp
sim/common/: constants.hpp
sim/common/buffers/: CMakeLists.txt
sim/mocking/: CMakeLists.txt  loc_data_const.hpp  location.cpp  location.hpp  vehicle_data.cpp  vehicle_data.hpp
sim/network/: CMakeLists.txt  ecal.cpp  ecal.hpp  network_mgr.cpp  network_mgr.hpp  networkif.hpp
sim/simulator/: CMakeLists.txt  location_unit.cpp  location_unit.hpp  simulator.cpp  simulator.hpp  vehicle_data_unit.cpp  vehicle_data_unit.hpp
sumo/: .gitignore
sumo/src/foreign/tcpip/: socket.cpp  socket.h
sumo/src/libtraci/: Simulation.cpp
sumo/src/traci_testclient/: testlibtraci_main.cpp
